creating my travel journal portfolio

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/98532ba50e.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/images/globe.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>first react project</title>
+    <title>My travel journal -React project</title>
   </head>
   <body>
     <div id="root"></div>
+
+  <script src="https://kit.fontawesome.com/98532ba50e.js" crossorigin="anonymous"></script>
     <script type="module" src="/src/main.jsx"></script>
     
   </body>
